--- a/assets/style.scss
+++ b/assets/style.scss
@@ -52,9 +52,12 @@ $theme-colors: (
 
 
   $accordion-button-active-bg: tint-color($component-active-bg, 90%);
-$accordion-button-active-color:shade-color($component-active-bg, 10%);
-$accordion-icon-color: $white;
-$accordion-icon-active-color: $white;
+  $accordion-button-active-color:shade-color($component-active-bg, 10%);
+  $accordion-icon-color: $white;
+  $accordion-icon-active-color: $white;
+
+$header-max-height: 63px;
+$green-hover-border: rgba($green, 0.5);
 @import "../node_modules/bootstrap/scss/bootstrap";
 
 @import 'aos/dist/aos.css';
@@ -75,56 +78,120 @@ $accordion-icon-active-color: $white;
     font-weight: 100;
   }
   
-  .preview article.hero {
+  .preview section.hero {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)),
       url("https://images.pexels.com/photos/1435895/pexels-photo-1435895.jpeg?auto=compress&cs=tinysrgb&dpr=3&w=1024");
     background-size: cover;
     color: white;
     padding: 0px;
+    transition: .12s box-shadow;
+    position: relative;
+  }
+  .preview section.hero:hover {
+    box-shadow: 0px 0px 0px 10px $green inset;
   }
   
-  article.hero > .row {
+  section.hero > .row {
     min-height: $section-height;
     align-content: center;
     /* backdrop-filter: blur(150px); */
     background-color: rgba(0, 0, 0, 0.13);
   }
   
-article.hero h1{
-  font-size: max(2rem, 3vw);
-  margin-top:max(2rem, 3vw);
+section.content .h1{
+  font-size: max(2rem, 2vw);
+  // margin-top:max(2rem, 3vw);
 }
-article.hero h3{
-  font-size: max(1rem, 2vw);
+section.content .h2{
+  font-size: max(1.75rem, 1.65vw) !important;
+  // margin-top:max(2rem, 3vw);
 }
-  article.content,
-  main.builder {
-    min-height: $section-height;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
+section.content .h3{
+  font-size: max(1rem, 1.5vw);
+}
+
+section.content .h4{
+  font-size: max(.75rem, 1.25vw);
+}
+
+section.content .h5{
+  font-size: max(.65rem, 1vw);
+}
+section.content .h6{
+  font-size: max(.5rem, 1vw);
+}
+
+
+section.content{
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+section.content > .row {
+  min-height: $section-height;
+
+  align-content: center;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+section.content.tempframe{
+  min-height: $section-height;
+  color: rgba(0, 0, 0, 0.33);
+  outline: 1px solid rgba(0, 0, 0, 0.13);
+  background-color: rgba(0, 0, 0, 0.043);
+  transition: .13s all ease-out;
+  transition-delay: .42s;
+  transition: .4s background-color ease-out;
+
+  &:hover{
+    outline: 1px solid $green-hover-border;
+    color: rgba(0, 0, 0, 0.63);
+    background-color:rgba(0, 0, 0, 0.13);
+    outline: 1px solid $green-hover-border;
+
   }
-  
-  article.content > .row {
-    align-content: center;
-    margin-left: 0;
-    margin-right: 0;
+  &:active{
+    background-color: black;
+    color: $green-hover-border;
+    background-color: $green-hover-border;
+    outline: 1px solid $green;
+
   }
-  
-  .card {
-    padding: 0px;
-  }
-  
+}
+section.content.tempframe .hover-text {
+  display: none;
+  // pointer-events: none;
+}
+section.content.tempframe:hover .hover-text{
+    display: block;
+
+}
+
+section.stats{
+  position: relative;
+}
+
+.layoutSelector .card{
+  cursor: pointer;
+
+}
   .card img {
     aspect-ratio: 3/2;
     object-fit: cover;
   }
 
-  .card[data-checked="true"] {
+  .layoutSelector .card[data-checked] {
     border: 1px solid $green;
   }
-  .card:not([data-checked="true"]):hover {
-    border: 1px solid rgba($green, 0.5);
+  .layoutSelector .card:not([data-checked]):hover {
+    border: 1px solid $green-hover-border;
+  }
+  .layoutSelector .card-body {
+    padding: 0rem;
+    padding-top:.5rem;
   }
   
   .scroll-row {
@@ -138,57 +205,126 @@ article.hero h3{
     display: inline-block;
   }
   
-  .scroll-row::-webkit-scrollbar {
+  .builder ::-webkit-scrollbar {
     height: 12px;
     width: 12px;
     background: rgb(219, 219, 219);
   }
   
-  .scroll-row::-webkit-scrollbar-thumb {
+  .builder ::-webkit-scrollbar-thumb {
     background: #6d6d6c3a;
     border-radius: 1ex;
     -webkit-border-radius: 1ex;
     -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.015);
   }
   
-  .scroll-row::-webkit-scrollbar-corner {
+  .builder ::-webkit-scrollbar-corner {
     background: #000;
   }
 
+
+  
   footer{
-    min-height: max(500px, 35vw);
+    min-height: max(550px, 35vw);
   }
 
   .placeholder{
     cursor: pointer;
   }
-  .preview > article {
-    opacity: 1;
-    animation: fade .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+
+  .preview {
+    scroll-behavior: smooth;
+  }
+  .preview > section:not(.preview) {
+    // opacity: 1;
+    animation: fade .25s cubic-bezier(0.165, 0.84, 0.44, 1);
   }
   @keyframes fade {
-    0% { opacity: 0 }
+    0% { opacity: 0.55 }
     100% { opacity: 1 }
   }
 
 
-  .preview > article:hover {
-      outline: 5px solid $green;  
+  .preview > section:hover {
+      // outline: 5px solid $green;  
   }
 
+  #builder-main{
+    display: grid;
+    grid-template-columns: [sidebar-start] max(15vw, 500px)  [canvas-start] auto;
+    grid-template-rows: 1fr;
+    height: calc(100vh - $header-max-height);
+
+  }
+
+  #builder-sidebar{
+    padding: 2rem;
+    position: sticky;
+    top: $header-max-height;
+    grid-column: sidebar-start;
+    max-height: calc(100vh - $header-max-height);
+    overflow-y: auto;
+
+
+  }
+  #builder-canvas{
+    grid-column-start: canvas-start;
+    overflow-y: auto;
+  }
+  
+
+  #builderAccordion .accordion-item{
+    background: transparent;
+  }
   #builderAccordion .accordion-button {
-    background-color:#fff;
-    font-size: 1.5rem;
+    background-color:$light;
+    font-size: 1rem;
     font-weight: bold;
     color: $black;
   }
   #builderAccordion .accordion-button.collapsed {
-    background-color: $white;
-    font-size: 1rem;
+    // background-color: $white;
+    // font-size: 1rem;
     color: $green;
   }
   .accordion-button:not(.collapsed)::after {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  }
+
+
+  .toolbar{
+    display: none;
+    position: absolute;
+    top:0;
+    right:0;
+    margin-right:0px;
+    background: $light;
+    z-index: 10;
+    opacity:0;
+    transition: .23s all ease-out;
+    width: auto;
+    
+
+  }
+
+.preview > section:hover .toolbar{
+  display: inline-flex;
+  opacity: 1;
+}
+.toolbar .toolbar-btn{
+  padding: 8px 15px;
+  background-color: $success;
+  display: inline-flex;
+  justify-content: center;
+  
+}
+.toolbar .toolbar-btn:hover{
+    background-color: $danger;
+    animation: fade .5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
+
+  .toolbar .toolbar-btn:active{
+    background-color: $black;
   }
 
   
