--- a/assets/style.scss
+++ b/assets/style.scss
@@ -78,7 +78,8 @@ $green-hover-border: rgba($green, 0.5);
     font-weight: 100;
   }
   
-  .preview section.hero {
+  .preview section.hero,
+  .proof section.hero {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)),
       url("https://images.pexels.com/photos/1435895/pexels-photo-1435895.jpeg?auto=compress&cs=tinysrgb&dpr=3&w=1024");
     background-size: cover;
